# babel

./: .gitignore  CMakeLists.txt  conanfile.txt  remove_pa.sh
.github/workflows/: build.yml
client/: CMakeLists.txt
client/include/: Client.hpp  ClientException.hpp
client/src/: CallScene.cpp  Client.cpp  ClientException.cpp  ConnexionScene.cpp  Contacts.cpp  HomeScene.cpp  LoadingScene.cpp  RegisterScene.cpp  main.cpp
docs/rfc/: rfc.html  rfc.xml
libs/: CMakeLists.txt
libs/audio/: CMakeLists.txt
libs/audio/include/audio/: Audio.hpp  AudioEncoder.hpp  Exception.hpp  IAudio.hpp  IAudioEncoder.hpp
libs/audio/src/: Audio.cpp  AudioEncoder.cpp  Exception.cpp
libs/graphical/: CMakeLists.txt
libs/graphical/include/graphical/: AWidgets.hpp  DialogBox.hpp  GraphicalException.hpp  GraphicalManager.hpp  IGraphical.hpp  IScene.hpp  IWidgets.hpp  Label.hpp  LineEdit.hpp  QButton.hpp  Scene.hpp  Widget.hpp
libs/graphical/src/: AWidgets.cpp  DialogBox.cpp  GraphicalException.cpp  GraphicalManager.cpp  Label.cpp  LineEdit.cpp  QButton.cpp  Scene.cpp  Widget.cpp
libs/network/: CMakeLists.txt
libs/network/include/network/: Exception.hpp  IServer.hpp  ISocket.hpp  Protocol.hpp  QTSocketTCP.hpp  QTSocketUDP.hpp  TCPServer.hpp  TCPSocket.hpp  Utils.hpp
libs/network/src/: Exception.cpp  QTSocketTCP.cpp  QTSocketUDP.cpp  TCPServer.cpp  TCPSocket.cpp  Utils.cpp
server/: CMakeLists.txt
server/include/server/: ClientInfo.hpp  DBHandler.hpp  Exception.hpp  ServerHandler.hpp  Storage.hpp  UserHandler.hpp
server/src/: ClientInfo.cpp  DBHandler.cpp  Exception.cpp  ServerHandler.cpp  UserHandler.cpp  main.cpp
